--- a/util/httprelay/202.html
+++ b/util/httprelay/202.html
@@ -3,9 +3,14 @@
     <link rel="stylesheet" type="text/css" href="/default.css">
     <link rel="icon" type="image/png" href="/favicon.png">
     <title>HTTP Relay - Accepted</title>
+    <script>
+function next() {
+    window.location.href="%(Location)s?wait=0";
+}
+    </script>
 </head>
-<body>
+<body onload="javascript:window.setTimeout(next,10000)">
     <h1>202 Accepted</h1>
-    <p>Request has been accepted. You can poll status at <a href="%(Location)s">%(Location)s</a>.</p>
+    <p>Request has been accepted. You can poll status at <a href="%(Location)s?wait=0">%(Location)s</a>.</p>
 </body>
 </html>
